Use TSV for the grades file